--- a/app/src/main/res/drawable/backgroundtext.xml
+++ b/app/src/main/res/drawable/backgroundtext.xml
@@ -4,7 +4,5 @@
 
     <stroke
         android:width="2dip"
-        android:color="@color/white" />
-
-
+        android:color="@color/black" />
 </shape>
