--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -102,12 +102,16 @@
         android:id="@+id/textView5"
         android:layout_width="347dp"
         android:layout_height="224dp"
-        android:text="Hãy chia sẽ những đều mà bạn thích về sản phẩm"
-        android:textSize="18sp"
         android:background="@drawable/backgroundtext"
         android:padding="20dp"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="411dp" />
+        android:text="Hãy chia sẽ những đều mà bạn thích về sản phẩm"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.802" />
 
     <TextView
         android:id="@+id/textView6"
